# RustyGameOfLife

./: Cargo.toml  README.md
src/: cells.rs  life.rs  main.rs
