[package]
name = "gol"
version = "0.1.0"
authors = ["geekskick <geeks_kick@yahoo.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
term_size = "0.3.2"
itertools = "0.9.0"
rand = "0.7.3"
sdl2 = "0.34"
clap = "2.33.1"